--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,13 @@ body {
   font-weight: 700;
 }
 
+/*для изменения цвета активной ссылки
++ добавим этот класс в соответст. страницы html*/
+.menu__list-link--active {
+  color: #0066ff;
+}
+
+
 .main {
   /* следующая строка для прибития футера к низу экрана */
   flex-grow: 1;
@@ -530,7 +537,7 @@ body {
 
 }
 
-.blog-aticles {
+.showmore-links {
   text-transform: uppercase;
   background-color: #151515;
   color: #fff;
